Code restructuring. Add endpoints for users to leave a group and endpoint to support user removal
